<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.evoliris.android.musicapp.AddAlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:inputType="text" />

        <DatePicker
            android:id="@+id/dp_add_out"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_add_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre_hint" />

        <EditText
            android:id="@+id/et_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_hint" />

        <CheckBox
            android:id="@+id/cb_add_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hint" />

        <RatingBar
            android:id="@+id/rb_add_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:max="5" />

        <Button
            android:id="@+id/btn_add_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_btn_text" />

    </LinearLayout>
</ScrollView>